--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-hook-form": "^7.56.3",
+    "react-icons": "^5.5.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "xlsx": "^0.18.5",
