--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tanstack/react-table": "^8.21.3",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/nodemailer": "^6.4.17",
+    "@vercel/blob": "^1.1.1",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -47,6 +48,7 @@
     "react-icons": "^5.5.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
+    "uuid": "^11.1.0",
     "xlsx": "^0.18.5",
     "zod": "^3.24.4"
   },
@@ -56,7 +58,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "prisma": "^6.8.2",
+    "prisma": "^6.9.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5"
